# wise-wallet

./: .gitignore  Cargo.toml  README.md
bundler/: README.md  package.json
bundler/src/relayer/: relayer.controller.ts  relayer.service.ts
client/: index.html  package.json
client/src/: App.tsx  index.tsx
client/src/components/: Connect.tsx  Footer.tsx  Intent.tsx  Navbar.tsx  Passkey.tsx  RecoveryTable.tsx
client/src/components/Home/: Feat.tsx  Hero.tsx  HomeNav.tsx  Team.tsx
client/src/components/UI/: ChoiceModal.tsx  InputGuardians.tsx  ResetOwner.tsx  ResultModal.tsx
client/src/context/: Web3Auth.tsx  cosmwasm.tsx
client/src/hooks/: cosmwasm.tsx
client/src/pages/: Deploy.tsx  Passkeys.tsx  Recovery.tsx
client/src/services/: keplr.tsx
client/src/util/: index.ts
contracts/entrypoint/: Cargo.toml
contracts/entrypoint/src/: contract.rs  msg.rs  state.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/limit/: Cargo.toml
contracts/limit/src/: contract.rs  msg.rs  state.rs
contracts/scw/: Cargo.toml
contracts/scw/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: README.md
relayer/: package-lock.json  package.json  tsconfig.json  tst.ts
relayer/src/: server.ts  server2.ts
solver-llm-api/: Cargo.toml  README.md
solver-llm-api/src/: main.rs
src/: contract.rs  msg.rs  state.rs
