[workspace]
members = [
  "contracts/limit",
  "contracts/entrypoint"
]

# [workspace.package]
# version = "0.0.1"
# license = "GPL-3.0-or-later"
# edition = "2021"

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.10
"""

[workspace.dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw-utils = "1.0.1"
anyhow = "1.0.70"
thiserror = "1.0.40"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
semver = "1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false
